Removed unnecessary background color from main menu links and removed bold on hover to stop jumping

--- a/css/ext_iastate.css
+++ b/css/ext_iastate.css
@@ -17,8 +17,6 @@
 /* Add hover effect to main menu links */
 .isu-nav-link:hover {
 	border-bottom: 3px solid #bbb !important;
-	background: #ddd !important;
-	font-weight: bold;
 }
 
 .isu-dropdown-item a:focus, .isu-dropdown-item a:hover, .isu-dropdown-item a.active, .isu-dropdown-item a:active {
